fix header z-index

--- a/css/_header.sass
+++ b/css/_header.sass
@@ -101,6 +101,7 @@
             height: 100vh
             background-color: $color-c
             transition-duration: 0.5s
+            z-index: 2
 
             &.collapsed
                 right: -210px
